--- a/footer.html
+++ b/footer.html
@@ -1,15 +1,16 @@
 <footer>
 
     <div class="translation">
-        <h4> <strong> NEED HELP? </strong></h4>
-        <ul class="help">
+        <h4>NEED HELP?</h4>
+        <nav class="help">
             <li> <a href="#"> Where's my order?</a></li>
             <li> <a href="#"> Sizing Chart</a></li>
-            <li><a href="#"> Returns & Exchanges </a></li>
+            <li><a href="#"> Returns &amp; Exchanges </a></li>
             <li><a href="#"> Delivery Info</a></li>
-        </ul>
+        </nav>
         <div class="email">
-            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>cle
+
             <p> Email: sizeofficial@gmail.com</p>
         </div>
 
